asignment 1 and 2 complete, index uppdated

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 	<head>
 	</head>
 	<body>
-	<p>kkkkkkkkk</p>
+	<hr>
+	<p><a href="assets/page/uppgift1.html">UPPGIFT 1</a></p>
+	<hr>
 	</body>
 </html>
