links in index added, assignment status changed in uppgift1.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<body>
 	<hr>
 	<p><a href="assets/page/uppgift1.html">UPPGIFT 1</a></p>
+	<p><a href="assets/page/uppgift2.html">UPPGIFT 2</a></p>
 	<hr>
 	</body>
 </html>
