uppgift 3 & 4 complete index uppdated

--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<title>Sjk16 Jonas Olsson</title>
 	</head>
 	<body>
 	<hr>
 	<p><a href="assets/page/uppgift1.html">UPPGIFT 1</a></p>
 	<p><a href="assets/page/uppgift2.html">UPPGIFT 2</a></p>
+	<p><a href="assets/page/uppgift3.html">UPPGIFT 3</a></p>
+	<p><a href="assets/page/uppgift4.html">UPPGIFT 4</a></p>
 	<hr>
 	</body>
 </html>
