Uppgift 5 Validator script

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 	<p><a href="assets/page/uppgift2.html">UPPGIFT 2</a></p>
 	<p><a href="assets/page/uppgift3.html">UPPGIFT 3</a></p>
 	<p><a href="assets/page/uppgift4.html">UPPGIFT 4</a></p>
+	<p><a href="assets/page/uppgift5.html">UPPGIFT 5</a></p>
+	<p><a href="assets/page/uppgift6.html">UPPGIFT 6</a></p>
 	<hr>
 	</body>
 </html>
