--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
 	<p><a href="assets/page/uppgift5.html">UPPGIFT 5</a></p>
 	<p><a href="assets/page/uppgift6.html">UPPGIFT 6</a></p>
 	<hr>
+	<p><a href="assets/page/morotskaka.html">SLUT UPPGIFT</a></p>
 	</body>
 </html>
